Update Blog “2019-12-26-pump-it”

--- a/src/pages/blog/2019-12-26-pump-it.md
+++ b/src/pages/blog/2019-12-26-pump-it.md
@@ -16,15 +16,15 @@ tags:
 
 So obviously a coffee maker needs to move water and essentially the complicated and tedious process of mastering pour overs is all about moving water. So, the pour over machine should be able to do it well, like REALLY well*.
 
-I haven't discussed pour over patterns yet because that is something that I feel like people are going to want to customize. Not every user may have the same showering feature. It will depend on a number of factors. One user may use nothing but a 2 cup brewer, another a nothing but 8 cups at a time, and others may mix it up depending on how little sleep they got the night before. 
+I haven't discussed pour over patterns yet because that is something that I feel like people are going to want to customize. Not every user may have the same showering feature. It will depend on a number of factors. One user may use nothing but a 2 cup brewer, another user nothing but 8 cups at a time, and others may mix it up depending on how little sleep they got the night before. 
 
-Another factor is how much someone really wants to put into the machine. If you always use the same brewer at a relatively similar amount of coffee, a quality shower head may be sufficient. However if you mix things up often or just really want to flexibility to dial in every detail of your cup, then you will want a moving spout that more accurately mimicks a human pour.
+Another factor is how much time and effort someone really wants to put into the machine. If you always use the same brewer at a relatively similar amount of coffee, a quality shower head may be sufficient. However if you mix things up often or just really want the flexibility to dial in every detail of your cup, then you will want a moving spout that more accurately mimics a human pour.
 
-Bah! I told myself I wasn't going to get into all of that today and two paragraphs later I haven't even said 'pump' yet! Pumps are the really topic of discussion today. A pump may not be as exciting as the pre cone water dispersal device, but it is arguably _more_ important. With out a pump (and/or gravity) how are you going to get the water to the coffee grounds!?
+Bah! I told myself I wasn't going to get into all of that today and two paragraphs later I haven't even said 'pump' yet! Pumps are the real topic of discussion today. A pump may not be as exciting as the pre-cone water dispersal device, but it is arguably _more_ important. With out a pump (and/or gravity) how are you going to get the water to the coffee grounds!?
 
 ### Gravity
 
-I wanted to discuss gravity or siphoning here because although it would be a fantastic solution, I have ruled it out. Using gravity would be fantastic because when the system needed to disperse hot water it could just open a valve and gravity would push it out. It is simple and I love simple. 
+I wanted to discuss gravity or siphoning even though it would be a fantastic solution, I have ruled it out. Using gravity would be great because when the system needed to disperse hot water it could just open a valve and gravity would push it out. It is simple and I love simple. 
 
 However, it poses a few problems. First, it would require the hot water to be above the brewing cone. Although I have joked elsewhere that the TipsyBrew should be dangerous to operate for idiots, I don't want to elevate the level of hot water any more than necessary. Another problem is that I am trying to design this using off the shelf parts. This means I do not want people to build their own boiler, especially if they already own one that may work. Other than those large 40+ cup coffee urns, there aren't many kettles on the shelf that drain from the bottom.  With gravity it is either open or closed and the flow on open may vary based on the kettle each person uses. If anyone begs to differ, please do contact me with details, because I really do like gravity.
 
